# CircleSeeker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CircleSeeker.drawio.xml  CircleSeekerTutorial.md  CircleSeeker完整工作流程教程.md  MANIFEST.in  README.md  RELEASING.md  TEST_GUIDE.md  environment.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
CircleSeeker2_dev/: pyproject.toml  requirements-dev.txt  run.txt
CircleSeeker2_dev/src/circleseeker2/: CircleSeeker2.py  __init__.py  __main__.py  __version__.py  circleseeker_organizer.py  cli.py  config.py  eccdna_analyzer.py  exceptions.py  step0_make_blastdb.py  step10_run_minimap2.py  step11_run_mosdepth.py  step12_Contortionist.py  step13_Juggler_v1.py  step1_tidehunter.py  step2_carousel.py  step3_run_blast.py  step4_gatekeeper.py  step5_trapeze.py  step6_menagerie.py  step7_run_cd_hit_est.py  step8_Harmonizer.py  step9_sieve.py
CircleSeeker2_dev/src/circleseeker2/utils/: logging.py
CircleSeeker2_dev/tests/: conftest.py  test_cli.py  test_config.py
CircleSeeker3/: build_cmd.txt  conda_build_job.sh
CircleSeeker3/circle_seeker/: CircleSeeker.py  MergeMecc.py  Tamer.py
CircleSeeker_1.0.0/: MANIFEST.in  setup.py
CircleSeeker_1.0.0/circle_seeker/: CircleSeeker.py  Cleaner.py  MergeUecc.py
CircleSeeker_1.0.0/conda-recipe/: meta.yaml
CircleSeeker_1.0.1/: setup.py
CircleSeeker_1.0.1/circle_seeker/: Astrologer.py  Carousel.py  CircleSeeker.py  Juggler.py  MergeMecc.py  MergeUecc.py  MergeUeccInf.py  ReportGenerator.py  Ringmaster.py  Tamer.py
CircleSeeker_1.0.1/conda-recipe/: meta.yaml
CircleSeeker_1.0.2/circle_seeker/: Juggler.py  Sieve.py
CircleSeeker_1.0.2/conda-recipe/: meta.yaml
CircleSeeker_1.0.3/: setup.py
CircleSeeker_1.0.3/circle_seeker/: Carousel.py  CircleSeeker.py  MergeMecc.py  MergeUecc.py  Ringmaster.py  TreatOther.py
CircleSeeker_1.1.0/circle_seeker/: Astrologer.py  CircleSeeker.py  Cleaner.py  Juggler.py  MergeCecc.py  MergeMecc.py  ReportGenerator.py  Ringmaster.py  Sieve.py
CircleSeeker_1.1.0/conda-recipe/: meta.yaml
CircleSeeker_1.1.1/: setup.py
CircleSeeker_1.1.1/circle_seeker/: Carousel.py  CircleSeeker.py  FAIProcessor.py  MergeMecc.py  MergeUeccInf.py  ReportGenerator.py  Sieve.py
CircleSeeker_1.1.1/conda-recipe/: meta.yaml
CircleSeeker_1.3.2/: setup.py
CircleSeeker_1.3.2/circle_seeker/: Astrologer.py  Carousel.py  CircleSeeker.py  FAIProcessor.py  Juggler.py  MergeCecc.py  (+7 more)
CircleSeeker_1.3.3/: readme.md  setup.py
CircleSeeker_2.0.1/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini
CircleSeeker_2.0.1/.claude/: settings.local.json
CircleSeeker_2.0.1/conda-recipe/: build_and_upload.sh  meta.yaml  test_local.sh
CircleSeeker_2.0.1/docs/: Module_Renames.md  README.md  Technical_Reconstruction_Plan.md
CircleSeeker_2.0.1/docs/testing/: HOW_TO_USE_TESTS.md
CircleSeeker_2.0.1/scripts/: README.md  migrate_existing_tests.sh  pytest.quick.ini
CircleSeeker_2.0.1/src/circleseeker/: __init__.py  __version__.py  cli.py  cli.txt  config.py  exceptions.py
CircleSeeker_2.0.1/src/circleseeker/algorithms/: __init__.py
CircleSeeker_2.0.1/src/circleseeker/core/: pipeline.py
CircleSeeker_2.0.1/src/circleseeker/io/: __init__.py
CircleSeeker_2.0.1/src/circleseeker/modules/: __init__.py  carousel.py  cecc_build.py  circle_validate.py  contortionist.py  ecc_dedup.py  file_organizer.py  gatekeeper.py  harmonizer.py  juggler.py  menagerie.py  playbill.py  propmaster.py  read_filter.py  report_generator.py  sieve.py  split_refine.py  tandem_to_ring.py  trapeze.py  um_classify.py  umc_process.py
CircleSeeker_2.0.1/src/circleseeker/modules/processors/: __init__.py
CircleSeeker_2.0.1/src/circleseeker/reports/: __init__.py
CircleSeeker_2.0.1/src/circleseeker/resources/: __init__.py
CircleSeeker_2.0.1/src/circleseeker/utils/: validators.py
CircleSeeker_2.0.1/tests/: utils.py
CircleSeeker_2.0.1/tests/.claude/: settings.local.json
CircleSeeker_2.0.1/tests/1k/: 1k_CeccDNA.junctions.bedpe  1k_CeccDNA.segments.bed  1k_CeccDNA.segments.core.csv  1k_InferredUeccDNA.bed  1k_InferredUeccDNA.csv  1k_MeccDNA.bestsite.bed  1k_MeccDNA.core.csv  1k_MeccDNA.sites.bed  1k_UeccDNA.bed  1k_UeccDNA.core.csv  1k_eccDNA_report.html  config.yaml
CircleSeeker_2.1.1/: .gitattributes  .gitignore  CONDA_PACKAGING_GUIDE.md  LICENSE  MANIFEST.in  environment.yml  pyproject.toml
HIFI/: 10k.read_list.csv  AlignCircle4.py  CTCR_Classifier.py  __init__.py  console.txt  eccDNA_Carousel.py  eccDNA_Juggler.py  eccDNA_Ringmaster.py  eccDNA_Sieve.py  environment.yml  extraction_assembly_script.py  main.ipynb  mian.py  setup.py
Literatures/: Literatures Review.md
change/: validation_report.md
circle-seeker/: CircleSeeker.py  Cleaner.py  Juggler.py  MergeMecc.py  ReportGenerator.py  TreatOther.py  setup.py
conda-recipe/: build_and_upload.sh  build_clean.sh  conda_build_config.yaml  meta.yaml  meta.yaml.bioconda  test_local.sh
dataset/: sampled_1k.fasta.fai  sampled_40k.fasta.fai
docs/: CLI_Reference.md  CLI_Reference_en.md  Configuration_Reference.md  Configuration_Reference_en.md  Output_Format_Reference.md  Output_Format_Reference_en.md  Pipeline_Modules.md  Pipeline_Modules_en.md  Runtime_Tmp_Dir.md  Runtime_Tmp_Dir_en.md  Simulation_Validation.md  Simulation_Validation_en.md  SplitReads_Core_Algorithm.md  SplitReads_Core_Algorithm_en.md  UMC_Classification_Model.md  UMC_Classification_Model_en.md  Validation_Methodology.md  Validation_Methodology_en.md  Validation_Report.md  eccDNA_Evolutionary_Dynamics_Hypothesis.md
release/: circle_seeker-1.0.1-pyh2b07374_0.tar.bz2
scripts/: batch_validation_results.json  check_docs_sync.py  cleanup_for_git.sh  plot_validation_results.py  run_ctcreads_core_validation.py  run_metadata_20260114_141315.json  run_server_gradient_validation.py  validate_molecule_recall.py
test_modules/: run_independent_tests.py  run_pipeline_tests.py  test_independent.py  test_new_impl.py
tests/: conftest.py
(+273 files in other folders)
