[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circleseeker"
version = "1.1.2"
description = "Comprehensive eccDNA detection from PacBio HiFi sequencing data"
readme = "README.md"
authors = [
    {name = "Yaoxin Zhang", email = "yxzhang@ncgr.ac.cn"},
    {name = "Leo Xinqi Yu", email = "leoxqy@hotmail.com"}
]
maintainers = [
    {name = "Yaoxin Zhang", email = "yxzhang@ncgr.ac.cn"}
]
license = { text = "GPL-3.0-only" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "biopython>=1.81",
    "pysam>=0.22.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "packaging>=23.0",
    "intervaltree>=3.1.0",
    "mappy>=2.26",
    "pybedtools>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "types-PyYAML",
    "pre-commit>=3.0.0",
    "tomli; python_version < '3.11'",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-click>=4.0.0",
    "myst-parser>=0.18.0",
]

[project.scripts]
circleseeker = "circleseeker.cli:main"
CircleSeeker = "circleseeker.cli:main"

[project.urls]
Homepage = "https://github.com/leoxqy/CircleSeeker"
Documentation = "https://github.com/leoxqy/CircleSeeker#readme"
Repository = "https://github.com/leoxqy/CircleSeeker.git"
"Bug Tracker" = "https://github.com/leoxqy/CircleSeeker/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["circleseeker*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
circleseeker = [
    "py.typed",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "circleseeker.cli.*",
  "circleseeker.config",
  "circleseeker.core.*",
  "circleseeker.external.*",
  "circleseeker.modules.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
source = ["src/circleseeker"]
omit = ["*/tests/*", "*/test_*.py", "*/__init__.py", "*/setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
